grammar.js
    start: $ => choice(
      repeat1($.program_definition),
      $.copybook_definition
    ),

    // Standalone copybook files (no IDENTIFICATION DIVISION)
    program_definition: $ => prec.right(seq(
      $.identification_division,
      optional($.environment_division),
      optional($.data_division),
      optional($.procedure_division), //todo
      repeat($.end_program), //todo
      //optional($.LINE_PREFIX_COMMENT),
    )),

    identification_division: $ => seq(
      $._IDENTIFICATION, $._DIVISION, '.',
      optional(
        seq($._PROGRAM_ID, '.',
          $.program_name,
          optional(choice(
            $.as_literal,
            $.is_initial,
            $.is_common)),
          '.')),
      repeat(choice(
        $.author_section,
        $.installation_section,
        $.date_written_section,
        $.date_compiled_section,
        $.security_section)),
    ),

    program_name: $ => choice(
      $._WORD,
      $._LITERAL
    ),

    environment_division: $ => seq(
      $._ENVIRONMENT,
      $._DIVISION,
      '.',
      optional(choice(
        seq(optional($.configuration_section), optional($.input_output_section)),
        $.copy_statement  // COPY can provide entire environment division content
      )),
    ),

    input_output_section: $ => choice(
      seq(
        $._INPUT_OUTPUT, $._SECTION, '.',
        optional($._file_control_paragraph),
        optional($._i_o_control_paragraph)
      ),
      $._file_control_paragraph,
      $._i_o_control_paragraph,
    ),

    _file_control_paragraph: $ => seq(
      $._FILE_CONTROL, '.',
      repeat($.select_statement)
    ),

    select_statement: $ => seq(
      $._SELECT,
      field('optional', optional($.OPTIONAL)),
      field('file_name', $.WORD),
      repeat($._select_clause),
      '.'
    ),

    _i_o_control_paragraph: $ => seq(
      $._I_O_CONTROL, '.', optional($.i_o_control),
    ),

    _select_clause: $ => choice(
      $.assign_clause,
      $.access_mode_clause,
      $.alternative_record_key,
      $.collating_sequence_clause,
      $.file_status_clause,
      $.lock_mode_clause,
      $.organization_clause,
      $.padding_character_clause,
      $.record_delimiter_clause,
      $.record_key_clause,
      $.relative_key_clause,
      $.reserve_clause,
      $.sharing_clause,
      $.error,
      $.nominal_key_clause,
    ),

    assign_clause: $ => seq(
      $._ASSIGN,
      optional($._TO),
      field('external_or_dynamic', optional($._ext_clause)),
      field('to', choice(
        $.DISK,
        $.PRINTER,
        seq(optional($._device), $._assignment_name),
      ))
    ),

    _ext_clause: $ => choice(
      $.EXTERNAL,
      $.DYNAMIC
    ),

    _device: $ => choice(
      $.DISK,
      $.PRINTER,
    ),

    _assignment_name: $ => choice(
      $._LITERAL,
      $.DISPLAY,
      seq(
        optional($._LITERAL), repeat1($.qualified_word)
      )
    ),

    data_division: $ => seq(
      $._DATA, $._DIVISION, '.',
      optional($.file_section),
      optional($.working_storage_section),
      optional($.local_storage_section),
      optional($.linkage_section),
      optional($.report_section),
      optional($.screen_section),
    ),

    file_section: $ => choice(
      seq(
        $._FILE,
        $._SECTION,
        '.',
        repeat($.file_description)
      ),
      seq(
        $.file_type,
        seq(
          $.file_description_entry,
          optional($.record_description_list),
          repeat1($.file_description)
        )
      )
    ),

    file_description: $ => choice(
      seq(
        $.file_type,
        $.file_description_entry,
        $.record_description_list
      ),
      // FD name COPY book. - COPY may be followed by additional record descriptions
      seq(
        $.file_type,
        $.WORD,
        $.copy_statement,
        optional($.record_description_list)
      )
    ),

    file_type: $ => choice(
      $.FD,
      $.SD
    ),

    file_description_entry: $ => seq(
      $.WORD,
      repeat($.file_description_clause),
      '.'
    ),

    record_description_list: $ => repeat1(
      choice(
        seq($.data_description, repeat1('.')),
        // level [name] COPY book. [clauses]. - COPY may be followed by additional clauses
        seq($.level_number, optional($.entry_name), $._copy_clause,
            repeat($._data_description_clause), '.'),
        $.copy_statement,
        $.exec_statement
      )
    ),

    working_storage_section: $ => seq(
      $._WORKING_STORAGE, $._SECTION, '.',
      repeat(choice(
        seq($.data_description, repeat1('.')),
        seq($.level_number, optional($.entry_name), $._copy_clause,
            repeat($._data_description_clause), '.'),
        $.copy_statement,
        $.exec_statement
      ))
    ),

    data_description: $ => choice(
      $.constant_entry,
      seq(
        $.level_number, $.entry_name,
        repeat($._data_description_clause), optional($._LITERAL)
      ),
      seq(
        $.level_number,
        repeat1($._data_description_clause), optional($._LITERAL)
      ),
      /*seq(
        $.level_number_88, $.entry_name
      ),*/
    ),

    level_number: $ => /[0-9][0-9]?/,
    entry_name: $ => choice(
      $._FILLER,
      $._WORD
    ),

    _data_description_clause: $ => choice(
      $.redefines_clause,
      $.external_clause,
      $.global_clause,
      $.picture_clause,
      $.usage_clause,
      $.sign_clause,
      $.occurs_clause,
      $.justified_clause,
      $.synchronized_clause,
      $.blank_clause,
      $.based_clause,
      $.value_clause,
      $.renames_clause,
      $.any_length_clause,
      $.error
    ),

    _identifier: $ => prec.right(choice(
      $.qualified_word,
      seq($.qualified_word, $.subref),
      seq($.qualified_word, $.refmod),
      seq($.qualified_word, $.subref, $.refmod),
    )),

    qualified_word: $ => sepBy(
      $.WORD, $._in_of
    ),

    _in_of: $ => choice(
      $._IN,
      $._OF
    ),

    picture_clause: $ => seq(
      choice($._PICTURE, $._PIC),
      optional($._IS),
      $._picture_string
    ),

    //todo
    _picture_string: $ => choice(
      $.picture_x,
      $.picture_n,
      $.picture_9,
      $.picture_a,
      $.picture_edit,
    ),

    picture_x: $ => /([xX](\([0-9]+\))?)+/,

    picture_9: $ => choice(
      $._picture_9_z,
      $._picture_9_v_1,
      $._picture_9_v_2,
    ),
    _picture_9_z: $ => /[sS]?(9(\([0-9]+\))?)+([zZ](\([0-9]+\))?)+/,
    _picture_9_v_1: $ => /[sS]?([pP9](\([0-9]+\))?)+([vV]([pP9](\([0-9]+\))?)*)?/,
    _picture_9_v_2: $ => /[sS]?[vV]([pP9](\([0-9]+\))?)*/,

    usage_clause: $ => seq(
      optional(seq($._USAGE, optional($._IS))),
      $._usage
    ),

    _usage: $ => choice(
      $.BINARY,
      $.COMPUTATIONAL,
      $.COMP,
      $.COMP_1,
      $.COMP_2,
      $.COMP_3,
      $.COMP_4,
      $.COMP_5,
      $.COMP_X,
      $.DISPLAY,
      $.INDEX,
      $.PACKED_DECIMAL,
      $.POINTER,
      $.PROGRAM_POINTER,
      $.SIGNED_SHORT,
      $.SIGNED_INT,
      $.SIGNED_LONG,
      $.UNSIGNED_SHORT,
      $.UNSIGNED_INT,
      $.UNSIGNED_LONG,
      seq($.BINARY_CHAR, $.SIGNED),
      seq($.BINARY_CHAR, $.UNSIGNED),
      $.BINARY_CHAR,
      seq($.BINARY_SHORT, $.SIGNED),
      seq($.BINARY_SHORT, $.UNSIGNED),
      $.BINARY_SHORT,
      seq($.BINARY_LONG, $.SIGNED),
      seq($.BINARY_LONG, $.UNSIGNED),
      $.BINARY_LONG,
      seq($.BINARY_DOUBLE, $.SIGNED),
      seq($.BINARY_DOUBLE, $.UNSIGNED),
      $.BINARY_DOUBLE,
      seq($.BINARY_C_LONG, $.SIGNED),
      seq($.BINARY_C_LONG, $.UNSIGNED),
      $.BINARY_C_LONG,
      $.NATIONAL
    ),

    value_clause: $ => prec.right(seq(
      choice($._VALUE, $._VALUES),
      optional(choice($._IS, $._ARE)),
      repeat1($.value_item),
      optional($._WHEN),
      optional($._SET),
      optional($._TO),
      optional(seq(
        $._FALSE,
        optional($._IS),
        field('when_set_to_false', $._literal)))
    )),

    value_item: $ => seq(
      $._literal,
      optional(seq(
        $.THRU,
        $._literal
      ))
    ),

    procedure_division: $ => seq(
      $._PROCEDURE, $._DIVISION,
      optional($.procedure_using_chaining),
      optional($.procedure_returning),
      '.',
      optional($.procedure_declaratives),
      optional($._procedure_division_contenet)
    ),

    _procedure_division_contenet: $ => prec.right(choice(
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat1($._procedure_division_statement)
      ),
      seq(
        optional($._procedure_division_headers),
        repeat1(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat($._procedure_division_statement)
      ),
    )),

    paragraph_header: $ => seq(
      field('name', choice($.WORD, $.integer)),
      '.'
    ),

    period: $ => '.',

    _copy_clause: $ => prec.right(seq(
      $._COPY,
      field('book', optional(choice($.WORD, $.string))),
      field('lib_name', optional(seq(
        $._in_of,
        choice($.WORD, $.string)))
      ),
      field('supress', optional($.SUPPRESS)),
      optional($.replacing_clause),
    )),

    close_statement: $ => seq(
      $._CLOSE,
      repeat1($.close_arg),
    ),

    close_arg: $ => seq(
      field('file_handler', $.WORD),
      optional($.close_option)
    ),

    close_option: $ => choice(
      seq(
        choice($.REEL, $.UNIT),
        optional($._close_removal)
      ),
      seq(optional($._WITH), $.NO, $.REWIND),
      seq(optional($._WITH), $.LOCK),
    ),

    _close_removal: $ => seq(
      optional($._FOR),
      $.REMOVAL
    ),

    display_statement: $ => seq(
      $._DISPLAY,
      $._display_body,
    ),

    _display_body: $ => prec.right(choice(
      seq($._id_or_lit, $._UPON_ENVIRONMENT_NAME),
      seq($._id_or_lit, $._UPON_ENVIRONMENT_VALUE),
      seq($._id_or_lit, $._UPON_ARGUMENT_NUMBER),
      seq($._id_or_lit, $._UPON_COMMAND_LINE),
      seq(repeat1($._x), optional($.at_line_column), optional($.with_clause)),
      seq(repeat1($._x), optional($.at_line_column), $.UPON, $.MNEMONIC_NAME, optional($.with_clause)),
      seq(repeat1($._x), optional($.at_line_column), $.UPON, $._WORD, optional($.with_clause)),
      seq(repeat1($._x), optional($.at_line_column), $.UPON, $.PRINTER, optional($.with_clause)),
      seq(repeat1($._x), optional($.at_line_column), $.UPON, $.CRT, optional($.with_clause)),
    )),

    evaluate_header: $ => prec.right(seq(
      $._EVALUATE,
      sepBy($.evaluate_subject, optional($._ALSO)),
    )),

    evaluate_subject: $ => choice(
      $.expr,
      $.TRUE,
      $.FALSE,
    ),

    when: $ => prec.right(repeat1(seq($._WHEN, $._evaluate_object_list))),

    _evaluate_object_list: $ => prec.right(sepBy($._evaluate_object, optional($._ALSO))),

    when_other: $ => $._WHEN_OTHER,

    goto_statement: $ => seq(
      $._GO, optional($._TO),
      field('to', repeat($.label)),
      field('depending', optional(seq($._DEPENDING, optional($._ON), $._identifier)))
    ),

    label: $ => choice(
      $.qualified_word,
      seq($._LITERAL, optional(seq($._in_of, $._LITERAL)))
    ),


    expr: $ => prec.left(choice(
      seq($.NOT, $.expr),
      seq($.expr, choice($.AND, $.OR), $.expr),
      $._expr_bool,
      seq("(", $.expr, ")")
    )),

    _expr_bool: $ => choice(
      $._expr_is,
      $._expr_compare,
      $._expr_calc,
      $.is_class,
      $.is_not_class,
    ),

    open_statement: $ => seq(
      $._OPEN,
      repeat1($.open_arg)
    ),

    open_arg: $ => seq(
      field('mode', choice($.INPUT, $.OUTPUT, $.I_O, $.EXTEND)),
      field('sharing', optional(seq(
        $._SHARING,
        optional($._WITH),
        choice(
          seq($.ALL, optional($._OTHER)),
          seq($.NO, optional($._OTHER)),
          seq($.READ, $.ONLY),
        )
      ))),
      field('file_name_list', repeat1($.WORD)),
      field('option', optional(choice(
        seq(optional($._WITH), $.NO, $.REWIND),
        seq(optional($._WITH), $.LOCK)
      )))
    ),

    _literal: $ => choice(
      $._basic_literal,
      seq($.ALL, $._basic_value)
    ),

    _LITERAL: $ => choice(
      $.number,
      $._string,
    ),

    //todo
    number: $ => choice($.integer, $.decimal),
    integer: $ => /[+-]?[0-9,]+/,
    decimal: $ => /[+-]?[0-9]*\.[0-9]+/,
    string: $ => choice(
      /('[^'\n]*')+/,
      /("[^"\n]*")+/,
      $._multiline_string,
    ),

    _ALSO: $ => /[aA][lL][sS][oO]/,
    _ARE: $ => /[aA][rR][eE]/,
    _ASSIGN: $ => /[aA][sS][sS][iI][gG][nN]/,
    _CLOSE: $ => /[cC][lL][oO][sS][eE]/,
    _DATA: $ => /[dD][aA][tT][aA]/,
    _DEPENDING: $ => /[dD][eE][pP][eE][nN][dD][iI][nN][gG]/,
    _DISPLAY: $ => /[dD][iI][sS][pP][lL][aA][yY]/,
    _DIVISION: $ => /[dD][iI][vV][iI][sS][iI][oO][nN]/,
    _ENVIRONMENT: $ => /[eE][nN][vV][iI][rR][oO][nN][mM][eE][nN][tT]/,
    _EVALUATE: $ => /[eE][vV][aA][lL][uU][aA][tT][eE]/,
    _FILLER: $ => /[fF][iI][lL][lL][eE][rR]/,
    _GO: $ => /[gG][oO]/,
    _IDENTIFICATION: $ => /[iI][dD][eE][nN][tT][iI][fF][iI][cC][aA][tT][iI][oO][nN]/,
    _INPUT_OUTPUT: $ => /[iI][nN][pP][uU][tT]-[oO][uU][tT][pP][uU][tT]/,
    _IS: $ => /[iI][sS]/,
    _ON: $ => /[oO][nN]/,
    _OPEN: $ => /[oO][pP][eE][nN]/,
    _OTHER: $ => /[oO][tT][hH][eE][rR]/,
    _PIC: $ => /[pP][iI][cC]/,
    _PICTURE: $ => /[pP][iI][cC][tT][uU][rR][eE]/,
    _PROCEDURE: $ => /[pP][rR][oO][cC][eE][dD][uU][rR][eE]/,
    _PROGRAM_ID: $ => /[pP][rR][oO][gG][rR][aA][mM]-[iI][dD]/,
    _SECTION: $ => /[sS][eE][cC][tT][iI][oO][nN]/,
    _SELECT: $ => /[sS][eE][lL][eE][cC][tT]/,
    _SET: $ => /[sS][eE][tT]/,
    _SHARING: $ => /[sS][hH][aA][rR][iI][nN][gG]/,
    _TO: $ => /[tT][oO]/,
    _FALSE: $ => /[fF][aA][lL][sS][eE]/,
    _FILE: $ => /[fF][iI][lL][eE]/,
    _USAGE: $ => /[uU][sS][aA][gG][eE]/,
    _VALUE: $ => /[vV][aA][lL][uU][eE]/,
    _VALUES: $ => /[vV][aA][lL][uU][eE][sS]/,
    _WHEN: $ => /[wW][hH][eE][nN]/,
    _WHEN_OTHER: $ => /[wW][hH][eE][nN][ \t\n]+[oO][tT][hH][eE][rR]/,
    _WITH: $ => /[wW][iI][tT][hH]/,
    _WORD: $ => /([0-9][a-zA-Z0-9-]*[a-zA-Z][a-zA-Z0-9-]*)|([a-zA-Z][a-zA-Z0-9-]*)/,
    _WORKING_STORAGE: $ => /[wW][oO][rR][kK][iI][nN][gG]-[sS][tT][oO][rR][aA][gG][eE]/,
