test/corpus/data_description.txt
====================================
file-section
====================================
       identification division.
       program-id. a.
003300 ENVIRONMENT DIVISION.                                            NC1014.2
003900 INPUT-OUTPUT SECTION.                                            NC1014.2
004000 FILE-CONTROL.                                                    NC1014.2
004100     SELECT PRINT-FILE ASSIGN TO                                  NC1014.2
004200     "report.log".                                                NC1014.2
004300 DATA DIVISION.                                                   NC1014.2
004400 FILE SECTION.                                                    NC1014.2
004500 FD  PRINT-FILE.                                                  NC1014.2
004600 01  PRINT-REC PICTURE X(120).                                    NC1014.2
004700 01  DUMMY-RECORD PICTURE X(120).                                 NC1014.2
004800 WORKING-STORAGE SECTION.                                         NC1014.2
004900 77  WRK-DS-18V00                PICTURE S9(18).                  NC1014.2
       PROCEDURE DIVISION.
       DISPLAY 1.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (environment_division
      (ENVIRONMENT)
      (DIVISION)
      (input_output_section
        (INPUT_OUTPUT)
        (SECTION)
        (FILE_CONTROL)
        (select_statement
          (SELECT)
          file_name: (WORD)
          (assign_clause
            (ASSIGN)
            to: (string)))))
    (data_division
      (DATA)
      (DIVISION)
      (file_section
        (file_description
          (file_type
            (FD))
          (file_description_entry
            (WORD))
          (record_description_list
            (data_description
              (level_number)
              (entry_name)
              (picture_clause
                (PICTURE)
                (picture_x)))
            (data_description
              (level_number)
              (entry_name)
              (picture_clause
                (PICTURE)
                (picture_x))))))
      (working_storage_section
        (WORKING_STORAGE)
        (SECTION)
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (PICTURE)
            (picture_9)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (display_statement
        (DISPLAY)
        (number
          (integer)))
      (period))))

====================================
value clause
====================================
       identification division.
       program-id. a.
       DATA DIVISION.                                                   
       WORKING-STORAGE SECTION.                                         
       77  A06THREES-DS-03V03          PICTURE S999V999 VALUE 333.333.  
       PROCEDURE DIVISION.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (data_division
      (DATA)
      (DIVISION)
      (working_storage_section
        (WORKING_STORAGE)
        (SECTION)
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (PICTURE)
            (picture_9))
          (value_clause
            (VALUE)
            (value_item
              (number
                (decimal)))))))
    (procedure_division
      (PROCEDURE)
      (DIVISION))))

====================================
picture decimal
====================================
       identification division.
       program-id. a.
       DATA DIVISION.                                                   
       WORKING-STORAGE SECTION.                                         
       77  A06THREES-DS-03V03     PICTURE SV9(5) VALUE .11111.
       PROCEDURE DIVISION.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (data_division
      (DATA)
      (DIVISION)
      (working_storage_section
        (WORKING_STORAGE)
        (SECTION)
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (PICTURE)
            (picture_9))
          (value_clause
            (VALUE)
            (value_item
              (number
                (decimal)))))))
    (procedure_division
      (PROCEDURE)
      (DIVISION))))

====================================
computational
====================================
       identification division.
       program-id. a.
       DATA DIVISION.                                                   
       WORKING-STORAGE SECTION.                                         
       77  A06THREES-DS-03V03     PICTURE SV9(5) COMPUTATIONAL.
       PROCEDURE DIVISION.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (data_division
      (DATA)
      (DIVISION)
      (working_storage_section
        (WORKING_STORAGE)
        (SECTION)
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (PICTURE)
            (picture_9))
          (usage_clause
            (COMPUTATIONAL)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION))))
