test/corpus/evaluate.txt
====================================
evaluate when
====================================
       identification division.
       program-id. a.
       procedure division.
       evaluate 1
       when 1
         go to aa
       end-evaluate.
       aa.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (procedure_division
      (evaluate_header
        (EVALUATE)
        (evaluate_subject
          (expr
            (number
              (integer)))))
      (when
        (WHEN)
        (expr
          (number
            (integer))))
      (goto_statement
        (GO)
        to: (label
          (qualified_word
            (WORD))))
      (END_EVALUATE)
      (period)
      (paragraph_header
        name: (WORD)))))

====================================
evaluate when 2
====================================
       identification division.
       program-id. a.
       procedure division.
       evaluate 1
       when 1
         go to aa
       when 2
         go to aa
       end-evaluate.
       aa.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (procedure_division
      (evaluate_header
        (EVALUATE)
        (evaluate_subject
          (expr
            (number
              (integer)))))
      (when
        (WHEN)
        (expr
          (number
            (integer))))
      (goto_statement
        (GO)
        to: (label
          (qualified_word
            (WORD))))
      (when
        (WHEN)
        (expr
          (number
            (integer))))
      (goto_statement
        (GO)
        to: (label
          (qualified_word
            (WORD))))
      (END_EVALUATE)
      (period)
      (paragraph_header
        name: (WORD)))))

====================================
evaluate when other
====================================
       identification division.
       program-id. a.
       procedure division.
       evaluate 1
       when 1
         go to aa
       when 2
         go to aa
       when other
         go to aa
       end-evaluate.
       aa.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (procedure_division
      (evaluate_header
        (EVALUATE)
        (evaluate_subject
          (expr
            (number
              (integer)))))
      (when
        (WHEN)
        (expr
          (number
            (integer))))
      (goto_statement
        (GO)
        to: (label
          (qualified_word
            (WORD))))
      (when
        (WHEN)
        (expr
          (number
            (integer))))
      (goto_statement
        (GO)
        to: (label
          (qualified_word
            (WORD))))
      (when_other
        (WHEN_OTHER))
      (goto_statement
        (GO)
        to: (label
          (qualified_word
            (WORD))))
      (END_EVALUATE)
      (period)
      (paragraph_header
        name: (WORD)))))

====================================
evaluate when when
====================================
       identification division.
       program-id. a.
       procedure division.
       evaluate 1
       when 1
       when 2
         go to aa
       end-evaluate.
       aa.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (procedure_division
      (evaluate_header
        (EVALUATE)
        (evaluate_subject
          (expr
            (number
              (integer)))))
      (when
        (WHEN)
        (expr
          (number
            (integer)))
        (WHEN)
        (expr
          (number
            (integer))))
      (goto_statement
        (GO)
        to: (label
          (qualified_word
            (WORD))))
      (END_EVALUATE)
      (period)
      (paragraph_header
        name: (WORD)))))

====================================
evaluate when also
====================================
       identification division.
       program-id. a.
       procedure division.
       evaluate 1 also 2
       when 1 also 2
         go to aa
       end-evaluate.
       aa.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (procedure_division
      (evaluate_header
        (EVALUATE)
        (evaluate_subject
          (expr
            (number
              (integer))))
        (evaluate_subject
          (expr
            (number
              (integer)))))
      (when
        (WHEN)
        (expr
          (number
            (integer)))
        (expr
          (number
            (integer))))
      (goto_statement
        (GO)
        to: (label
          (qualified_word
            (WORD))))
      (END_EVALUATE)
      (period)
      (paragraph_header
        name: (WORD)))))
