test/corpus/file.txt
====================================
open input
====================================
       identification division.
       program-id. a.
       environment division.
       input-output section.
       FILE-CONTROL.
       select f assign PRINTER.
       procedure division.
       open input f.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (environment_division
      (ENVIRONMENT)
      (DIVISION)
      (input_output_section
        (INPUT_OUTPUT)
        (SECTION)
        (FILE_CONTROL)
        (select_statement
          (SELECT)
          file_name: (WORD)
          (assign_clause
            (ASSIGN)
            to: (PRINTER)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (open_statement
        (OPEN)
        (open_arg
          mode: (INPUT)
          file_name_list: (WORD)))
      (period))))

====================================
open output
====================================
       identification division.
       program-id. a.
       environment division.
       input-output section.
       FILE-CONTROL.
       select f assign PRINTER.
       procedure division.
       open output f.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (environment_division
      (ENVIRONMENT)
      (DIVISION)
      (input_output_section
        (INPUT_OUTPUT)
        (SECTION)
        (FILE_CONTROL)
        (select_statement
          (SELECT)
          file_name: (WORD)
          (assign_clause
            (ASSIGN)
            to: (PRINTER)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (open_statement
        (OPEN)
        (open_arg
          mode: (OUTPUT)
          file_name_list: (WORD)))
      (period))))

====================================
open i-o
====================================
       identification division.
       program-id. a.
       environment division.
       input-output section.
       FILE-CONTROL.
       select f assign PRINTER.
       procedure division.
       open i-o f.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (environment_division
      (ENVIRONMENT)
      (DIVISION)
      (input_output_section
        (INPUT_OUTPUT)
        (SECTION)
        (FILE_CONTROL)
        (select_statement
          (SELECT)
          file_name: (WORD)
          (assign_clause
            (ASSIGN)
            to: (PRINTER)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (open_statement
        (OPEN)
        (open_arg
          mode: (I_O)
          file_name_list: (WORD)))
      (period))))

====================================
open extend
====================================
       identification division.
       program-id. a.
       environment division.
       input-output section.
       FILE-CONTROL.
       select f assign PRINTER.
       procedure division.
       open extend f.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (environment_division
      (ENVIRONMENT)
      (DIVISION)
      (input_output_section
        (INPUT_OUTPUT)
        (SECTION)
        (FILE_CONTROL)
        (select_statement
          (SELECT)
          file_name: (WORD)
          (assign_clause
            (ASSIGN)
            to: (PRINTER)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (open_statement
        (OPEN)
        (open_arg
          mode: (EXTEND)
          file_name_list: (WORD)))
      (period))))

====================================
close
====================================
       identification division.
       program-id. a.
       environment division.
       input-output section.
       FILE-CONTROL.
       select f assign PRINTER.
       procedure division.
       close f.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (environment_division
      (ENVIRONMENT)
      (DIVISION)
      (input_output_section
        (INPUT_OUTPUT)
        (SECTION)
        (FILE_CONTROL)
        (select_statement
          (SELECT)
          file_name: (WORD)
          (assign_clause
            (ASSIGN)
            to: (PRINTER)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (close_statement
        (CLOSE)
        (close_arg
          file_handler: (WORD)))
      (period))))

====================================
close reel
====================================
       identification division.
       program-id. a.
       environment division.
       input-output section.
       FILE-CONTROL.
       select f assign PRINTER.
       procedure division.
       close f reel.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (environment_division
      (ENVIRONMENT)
      (DIVISION)
      (input_output_section
        (INPUT_OUTPUT)
        (SECTION)
        (FILE_CONTROL)
        (select_statement
          (SELECT)
          file_name: (WORD)
          (assign_clause
            (ASSIGN)
            to: (PRINTER)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (close_statement
        (CLOSE)
        (close_arg
          file_handler: (WORD)
          (close_option
            (REEL))))
      (period))))

====================================
close unit
====================================
       identification division.
       program-id. a.
       environment division.
       input-output section.
       FILE-CONTROL.
       select f assign PRINTER.
       procedure division.
       close f UNIT.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (environment_division
      (ENVIRONMENT)
      (DIVISION)
      (input_output_section
        (INPUT_OUTPUT)
        (SECTION)
        (FILE_CONTROL)
        (select_statement
          (SELECT)
          file_name: (WORD)
          (assign_clause
            (ASSIGN)
            to: (PRINTER)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (close_statement
        (CLOSE)
        (close_arg
          file_handler: (WORD)
          (close_option
            (UNIT))))
      (period))))

====================================
close unit removal
====================================
       identification division.
       program-id. a.
       environment division.
       input-output section.
       FILE-CONTROL.
       select f assign PRINTER.
       procedure division.
       close f unit removal.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (environment_division
      (ENVIRONMENT)
      (DIVISION)
      (input_output_section
        (INPUT_OUTPUT)
        (SECTION)
        (FILE_CONTROL)
        (select_statement
          (SELECT)
          file_name: (WORD)
          (assign_clause
            (ASSIGN)
            to: (PRINTER)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (close_statement
        (CLOSE)
        (close_arg
          file_handler: (WORD)
          (close_option
            (UNIT)
            (REMOVAL))))
      (period))))

====================================
close unit for removal
====================================
       identification division.
       program-id. a.
       environment division.
       input-output section.
       FILE-CONTROL.
       select f assign PRINTER.
       procedure division.
       close f unit for removal.
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (environment_division
      (ENVIRONMENT)
      (DIVISION)
      (input_output_section
        (INPUT_OUTPUT)
        (SECTION)
        (FILE_CONTROL)
        (select_statement
          (SELECT)
          file_name: (WORD)
          (assign_clause
            (ASSIGN)
            to: (PRINTER)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (close_statement
        (CLOSE)
        (close_arg
          file_handler: (WORD)
          (close_option
            (UNIT)
            (REMOVAL))))
      (period))))

====================================
close unit no rewind
====================================
       identification division.
       program-id. a.
       environment division.
       input-output section.
       FILE-CONTROL.
       select f assign PRINTER.
       procedure division.
       close f no rewind. 
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (environment_division
      (ENVIRONMENT)
      (DIVISION)
      (input_output_section
        (INPUT_OUTPUT)
        (SECTION)
        (FILE_CONTROL)
        (select_statement
          (SELECT)
          file_name: (WORD)
          (assign_clause
            (ASSIGN)
            to: (PRINTER)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (close_statement
        (CLOSE)
        (close_arg
          file_handler: (WORD)
          (close_option
            (NO)
            (REWIND))))
      (period))))

====================================
close unit with no rewind
====================================
       identification division.
       program-id. a.
       environment division.
       input-output section.
       FILE-CONTROL.
       select f assign PRINTER.
       procedure division.
       close f with no rewind. 
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (environment_division
      (ENVIRONMENT)
      (DIVISION)
      (input_output_section
        (INPUT_OUTPUT)
        (SECTION)
        (FILE_CONTROL)
        (select_statement
          (SELECT)
          file_name: (WORD)
          (assign_clause
            (ASSIGN)
            to: (PRINTER)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (close_statement
        (CLOSE)
        (close_arg
          file_handler: (WORD)
          (close_option
            (NO)
            (REWIND))))
      (period))))

====================================
close unit lock
====================================
       identification division.
       program-id. a.
       environment division.
       input-output section.
       FILE-CONTROL.
       select f assign PRINTER.
       procedure division.
       close f lock. 
---

(start
  (program_definition
    (identification_division
      (IDENTIFICATION)
      (DIVISION)
      (program_name))
    (environment_division
      (ENVIRONMENT)
      (DIVISION)
      (input_output_section
        (INPUT_OUTPUT)
        (SECTION)
        (FILE_CONTROL)
        (select_statement
          (SELECT)
          file_name: (WORD)
          (assign_clause
            (ASSIGN)
            to: (PRINTER)))))
    (procedure_division
      (PROCEDURE)
      (DIVISION)
      (close_statement
        (CLOSE)
        (close_arg
          file_handler: (WORD)
          (close_option
            (LOCK))))
      (period))))
